--- a/celine/dataset/templates/index.html
+++ b/celine/dataset/templates/index.html
@@ -14,7 +14,7 @@
         <ul class="distribution-list">
             {% for dist in distributions %}
             <li>
-                <a href="/dataset/{{ dist.dataset_id }}">
+                <a href="/catalogue/{{ dist.dataset_id }}">
                     {% if dist.title %}
                     <span class="dist-title">{{ dist.title }}</span>
                     {% endif %}
